// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs renders 1`] = `
<nav
  className="sc-kibuJE dcQYbC"
>
  <a
    className="sc-hBxvHn cGfpKu"
    href="#nav-test-id-1"
  >
    Skip to content
  </a>
  <ul
    className="sc-liRGCe sc-kjGiqv jPdwVe feTnMj"
  >
    <li
      className="sc-fRUzah jqVePJ"
      onClick={[Function]}
    >
      <a
        className="sc-bkSjNy llfJnn"
        href="#2"
      >
        Featured
      </a>
    </li>
    <li
      className="sc-fRUzah jqVePJ"
      onClick={[Function]}
    >
      <a
        className="sc-bkSjNy llfJnn"
        href="#3"
      >
        Today
      </a>
    </li>
    <li
      className="sc-fRUzah jqVePJ"
      onClick={[Function]}
    >
      <a
        className="sc-bkSjNy llfJnn"
        href="#4"
      >
        Tomorrow
      </a>
    </li>
    <li
      className="sc-fRUzah jqVePJ"
      onClick={[Function]}
    >
      <a
        className="sc-bkSjNy llfJnn"
        href="#5"
      >
        Future
      </a>
    </li>
    <li
      className="sc-fRUzah jqVePJ"
      onClick={[Function]}
    >
      <a
        className="sc-bkSjNy llfJnn"
        href="#6"
      >
        Outright
      </a>
    </li>
    <li
      className="sc-fRUzah jqVePJ"
      onClick={[Function]}
    >
      <a
        className="sc-bkSjNy llfJnn"
        href="#7"
      >
        Leagues
      </a>
    </li>
    <li
      className="sc-fRUzah jqVePJ"
      onClick={[Function]}
    >
      <a
        className="sc-bkSjNy llfJnn"
        href="#8"
      >
        News
      </a>
    </li>
  </ul>
  <span
    id="nav-test-id-1"
  />
</nav>
`;

exports[`Tabs renders HorizontalVariants 1`] = `
Array [
  <nav
    className="sc-kibuJE dcQYbC"
  >
    <a
      className="sc-hBxvHn cGfpKu"
      href="#nav-test-id-1"
    >
      Skip to content
    </a>
    <ul
      className="sc-liRGCe sc-kjGiqv jPdwVe feTnMj"
    >
      <li
        className="sc-fRUzah jqVePJ"
        onClick={[Function]}
      >
        <a
          className="sc-bkSjNy hGJMzS"
          href="#2"
        >
          Featured
        </a>
      </li>
      <li
        className="sc-fRUzah jqVePJ"
        onClick={[Function]}
      >
        <a
          className="sc-bkSjNy hGJMzS"
          href="#3"
        >
          Today
        </a>
      </li>
      <li
        className="sc-fRUzah jqVePJ"
        onClick={[Function]}
      >
        <a
          className="sc-bkSjNy hGJMzS"
          href="#4"
        >
          Tomorrow
        </a>
      </li>
      <li
        className="sc-fRUzah jqVePJ"
        onClick={[Function]}
      >
        <a
          className="sc-bkSjNy hGJMzS"
          href="#5"
        >
          Future
        </a>
      </li>
      <li
        className="sc-fRUzah jqVePJ"
        onClick={[Function]}
      >
        <a
          className="sc-bkSjNy hGJMzS"
          href="#6"
        >
          Outright
        </a>
      </li>
      <li
        className="sc-fRUzah jqVePJ"
        onClick={[Function]}
      >
        <a
          className="sc-bkSjNy hGJMzS"
          href="#7"
        >
          Leagues
        </a>
      </li>
      <li
        className="sc-fRUzah jqVePJ"
        onClick={[Function]}
      >
        <a
          className="sc-bkSjNy hGJMzS"
          href="#8"
        >
          News
        </a>
      </li>
    </ul>
    <span
      id="nav-test-id-1"
    />
  </nav>,
  <nav
    className="sc-kibuJE dcQYbC"
  >
    <a
      className="sc-hBxvHn cGfpKu"
      href="#nav-test-id-2"
    >
      Skip to content
    </a>
    <ul
      className="sc-liRGCe sc-kjGiqv jPdwVe feTnMj"
    >
      <li
        className="sc-fRUzah jqVePJ"
        onClick={[Function]}
      >
        <a
          className="sc-eiXkCI dpEIDn tab-link-fill"
          href="#2"
        >
          Featured
        </a>
      </li>
      <li
        className="sc-fRUzah jqVePJ"
        onClick={[Function]}
      >
        <a
          className="sc-eiXkCI dpEIDn tab-link-fill"
          href="#3"
        >
          Today
        </a>
      </li>
      <li
        className="sc-fRUzah jqVePJ"
        onClick={[Function]}
      >
        <a
          className="sc-eiXkCI dpEIDn tab-link-fill"
          href="#4"
        >
          Tomorrow
        </a>
      </li>
      <li
        className="sc-fRUzah jqVePJ"
        onClick={[Function]}
      >
        <a
          className="sc-eiXkCI dpEIDn tab-link-fill"
          href="#5"
        >
          Future
        </a>
      </li>
      <li
        className="sc-fRUzah jqVePJ"
        onClick={[Function]}
      >
        <a
          className="sc-eiXkCI dpEIDn tab-link-fill"
          href="#6"
        >
          Outright
        </a>
      </li>
      <li
        className="sc-fRUzah jqVePJ"
        onClick={[Function]}
      >
        <a
          className="sc-eiXkCI dpEIDn tab-link-fill"
          href="#7"
        >
          Leagues
        </a>
      </li>
      <li
        className="sc-fRUzah jqVePJ"
        onClick={[Function]}
      >
        <a
          className="sc-eiXkCI dpEIDn tab-link-fill"
          href="#8"
        >
          News
        </a>
      </li>
    </ul>
    <span
      id="nav-test-id-2"
    />
  </nav>,
  <nav
    className="sc-kibuJE ihDoMw"
  >
    <a
      className="sc-hBxvHn cGfpKu"
      href="#nav-test-id-1"
    >
      Skip to content
    </a>
    <ul
      className="sc-liRGCe sc-kjGiqv jPdwVe kroWod"
    >
      <li
        className="sc-fRUzah jISzKM active"
        onClick={[Function]}
      >
        <a
          className="sc-eiXkCI dpEIDn tab-link-fill"
          href="#2"
        >
          Featured
        </a>
      </li>
      <li
        className="sc-fRUzah jISzKM"
        onClick={[Function]}
      >
        <a
          className="sc-eiXkCI dpEIDn tab-link-fill"
          href="#3"
        >
          Today
        </a>
      </li>
      <li
        className="sc-fRUzah jISzKM"
        onClick={[Function]}
      >
        <a
          className="sc-eiXkCI dpEIDn tab-link-fill"
          href="#4"
        >
          Tomorrow
        </a>
      </li>
      <li
        className="sc-fRUzah jISzKM"
        onClick={[Function]}
      >
        <a
          className="sc-eiXkCI dpEIDn tab-link-fill"
          href="#5"
        >
          Future
        </a>
      </li>
      <li
        className="sc-fRUzah jISzKM"
        onClick={[Function]}
      >
        <a
          className="sc-eiXkCI dpEIDn tab-link-fill"
          href="#6"
        >
          Outright
        </a>
      </li>
      <li
        className="sc-fRUzah jISzKM"
        onClick={[Function]}
      >
        <a
          className="sc-eiXkCI dpEIDn tab-link-fill"
          href="#7"
        >
          Leagues
        </a>
      </li>
      <li
        className="sc-fRUzah jISzKM"
        onClick={[Function]}
      >
        <a
          className="sc-eiXkCI dpEIDn tab-link-fill"
          href="#8"
        >
          News
        </a>
      </li>
    </ul>
    <span
      id="nav-test-id-1"
    />
  </nav>,
]
`;

exports[`Tabs renders Small 1`] = `
<nav
  className="sc-kibuJE dcQYbC"
>
  <a
    className="sc-hBxvHn cGfpKu"
    href="#nav-test-id-1"
  >
    Skip to content
  </a>
  <ul
    className="sc-liRGCe sc-kjGiqv jPdwVe feTnMj"
  >
    <li
      className="sc-fRUzah jqVePJ"
      onClick={[Function]}
    >
      <a
        className="sc-bkSjNy hbSVQm"
        href="#2"
        size="small"
      >
        Featured
      </a>
    </li>
    <li
      className="sc-fRUzah jqVePJ"
      onClick={[Function]}
    >
      <a
        className="sc-bkSjNy hbSVQm"
        href="#3"
        size="small"
      >
        Today
      </a>
    </li>
    <li
      className="sc-fRUzah jqVePJ"
      onClick={[Function]}
    >
      <a
        className="sc-bkSjNy hbSVQm"
        href="#4"
        size="small"
      >
        Tomorrow
      </a>
    </li>
    <li
      className="sc-fRUzah jqVePJ"
      onClick={[Function]}
    >
      <a
        className="sc-bkSjNy hbSVQm"
        href="#5"
        size="small"
      >
        Future
      </a>
    </li>
    <li
      className="sc-fRUzah jqVePJ"
      onClick={[Function]}
    >
      <a
        className="sc-bkSjNy hbSVQm"
        href="#6"
        size="small"
      >
        Outright
      </a>
    </li>
    <li
      className="sc-fRUzah jqVePJ"
      onClick={[Function]}
    >
      <a
        className="sc-bkSjNy hbSVQm"
        href="#7"
        size="small"
      >
        Leagues
      </a>
    </li>
    <li
      className="sc-fRUzah jqVePJ"
      onClick={[Function]}
    >
      <a
        className="sc-bkSjNy hbSVQm"
        href="#8"
        size="small"
      >
        News
      </a>
    </li>
  </ul>
  <span
    id="nav-test-id-1"
  />
</nav>
`;

exports[`Tabs renders Variant 1`] = `
<nav
  className="sc-kibuJE dcQYbC"
>
  <a
    className="sc-hBxvHn cGfpKu"
    href="#nav-test-id-1"
  >
    Skip to content
  </a>
  <ul
    className="sc-liRGCe sc-kjGiqv jPdwVe feTnMj"
  >
    <li
      className="sc-fRUzah jqVePJ"
      onClick={[Function]}
    >
      <a
        className="sc-bkSjNy llfJnn"
        href="#2"
      >
        Featured
        <span
          className="sc-kbXUY iYkimx"
        >
          00
        </span>
      </a>
    </li>
    <li
      className="sc-fRUzah jqVePJ"
      onClick={[Function]}
    >
      <a
        className="sc-bkSjNy llfJnn"
        href="#3"
      >
        Today
      </a>
    </li>
    <li
      className="sc-fRUzah jqVePJ"
      onClick={[Function]}
    >
      <a
        className="sc-bkSjNy llfJnn"
        href="#4"
      >
        <div
          className="sc-fMjwjh tFTpL"
        >
          <svg
            className="sc-dxcDKg"
            fill="none"
            fontSize="1.5rem"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12.337 25.5H7.855c-.752 0-1.36-.614-1.355-1.367l.062-8.143a1.356 1.356 0 011.355-1.347h4.42m0 10.857h9.326c.635 0 1.184-.442 1.322-1.063l2.482-9.708a1.357 1.357 0 00-1.323-1.652h-3.781c-.854 0-1.524-.573-1.359-1.412l.7-3.545a1.357 1.357 0 00-1.33-1.62h-.266c-.482 0-.928.256-1.17.673l-4.6 7.47m0 10.857V14.643"
              stroke="currentColor"
            />
          </svg>
        </div>
        Tomorrow
      </a>
    </li>
    <li
      className="sc-fRUzah jqVePJ"
      onClick={[Function]}
    >
      <a
        className="sc-bkSjNy llfJnn"
        href="#5"
      >
        <div
          className="sc-fMjwjh tFTpL"
        >
          <svg
            className="sc-dxcDKg"
            fill="none"
            fontSize="1.5rem"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12.337 25.5H7.855c-.752 0-1.36-.614-1.355-1.367l.062-8.143a1.356 1.356 0 011.355-1.347h4.42m0 10.857h9.326c.635 0 1.184-.442 1.322-1.063l2.482-9.708a1.357 1.357 0 00-1.323-1.652h-3.781c-.854 0-1.524-.573-1.359-1.412l.7-3.545a1.357 1.357 0 00-1.33-1.62h-.266c-.482 0-.928.256-1.17.673l-4.6 7.47m0 10.857V14.643"
              stroke="currentColor"
            />
          </svg>
        </div>
        Future
        <span
          className="sc-kbXUY iYkimx"
        >
          00
        </span>
      </a>
    </li>
    <li
      className="sc-fRUzah jqVePJ"
      onClick={[Function]}
    >
      <a
        className="sc-bkSjNy llfJnn"
        href="#6"
      >
        Outright
      </a>
    </li>
    <li
      className="sc-fRUzah jqVePJ"
      onClick={[Function]}
    >
      <a
        className="sc-bkSjNy llfJnn"
        href="#7"
      >
        Leagues
      </a>
    </li>
    <li
      className="sc-fRUzah jqVePJ"
      onClick={[Function]}
    >
      <a
        className="sc-bkSjNy llfJnn"
        href="#8"
      >
        News
      </a>
    </li>
  </ul>
  <span
    id="nav-test-id-1"
  />
</nav>
`;

exports[`Tabs renders VerticalVariants 1`] = `
<div
  className="flex flex-row justify-around items-end w-full gap-2"
>
  <nav
    className="sc-kibuJE grMMYS"
  >
    <a
      className="sc-hBxvHn cGfpKu"
      href="#nav-test-id-1"
    >
      Skip to content
    </a>
    <ul
      className="sc-liRGCe sc-kjGiqv jPdwVe feTnMj"
    >
      <li
        className="sc-fRUzah ljiNiH"
        onClick={[Function]}
      >
        <a
          className="sc-bkSjNy llfJnn"
          href="#2"
        >
          Featured
        </a>
      </li>
      <li
        className="sc-fRUzah ljiNiH"
        onClick={[Function]}
      >
        <a
          className="sc-bkSjNy llfJnn"
          href="#3"
        >
          Today
        </a>
      </li>
      <li
        className="sc-fRUzah ljiNiH"
        onClick={[Function]}
      >
        <a
          className="sc-bkSjNy llfJnn"
          href="#4"
        >
          Tomorrow
        </a>
      </li>
      <li
        className="sc-fRUzah ljiNiH"
        onClick={[Function]}
      >
        <a
          className="sc-bkSjNy llfJnn"
          href="#5"
        >
          Future
        </a>
      </li>
      <li
        className="sc-fRUzah ljiNiH"
        onClick={[Function]}
      >
        <a
          className="sc-bkSjNy llfJnn"
          href="#6"
        >
          Outright
        </a>
      </li>
      <li
        className="sc-fRUzah ljiNiH"
        onClick={[Function]}
      >
        <a
          className="sc-bkSjNy llfJnn"
          href="#7"
        >
          Leagues
        </a>
      </li>
      <li
        className="sc-fRUzah ljiNiH"
        onClick={[Function]}
      >
        <a
          className="sc-bkSjNy llfJnn"
          href="#8"
        >
          News
        </a>
      </li>
    </ul>
    <span
      id="nav-test-id-1"
    />
  </nav>
  <nav
    className="sc-kibuJE dKetL"
  >
    <a
      className="sc-hBxvHn cGfpKu"
      href="#nav-test-id-1"
    >
      Skip to content
    </a>
    <ul
      className="sc-liRGCe sc-kjGiqv jPdwVe feTnMj"
    >
      <li
        className="sc-fRUzah bHkKb"
        onClick={[Function]}
      >
        <a
          className="sc-bkSjNy hGJMzS"
          href="#2"
        >
          Featured
        </a>
      </li>
      <li
        className="sc-fRUzah bHkKb"
        onClick={[Function]}
      >
        <a
          className="sc-bkSjNy hGJMzS"
          href="#3"
        >
          Today
        </a>
      </li>
      <li
        className="sc-fRUzah bHkKb"
        onClick={[Function]}
      >
        <a
          className="sc-bkSjNy hGJMzS"
          href="#4"
        >
          Tomorrow
        </a>
      </li>
      <li
        className="sc-fRUzah bHkKb"
        onClick={[Function]}
      >
        <a
          className="sc-bkSjNy hGJMzS"
          href="#5"
        >
          Future
        </a>
      </li>
      <li
        className="sc-fRUzah bHkKb"
        onClick={[Function]}
      >
        <a
          className="sc-bkSjNy hGJMzS"
          href="#6"
        >
          Outright
        </a>
      </li>
      <li
        className="sc-fRUzah bHkKb"
        onClick={[Function]}
      >
        <a
          className="sc-bkSjNy hGJMzS"
          href="#7"
        >
          Leagues
        </a>
      </li>
      <li
        className="sc-fRUzah bHkKb"
        onClick={[Function]}
      >
        <a
          className="sc-bkSjNy hGJMzS"
          href="#8"
        >
          News
        </a>
      </li>
    </ul>
    <span
      id="nav-test-id-1"
    />
  </nav>
  <nav
    className="sc-kibuJE grMMYS"
  >
    <a
      className="sc-hBxvHn cGfpKu"
      href="#nav-test-id-1"
    >
      Skip to content
    </a>
    <ul
      className="sc-liRGCe sc-kjGiqv jPdwVe feTnMj"
    >
      <li
        className="sc-fRUzah ljiNiH"
        onClick={[Function]}
      >
        <a
          className="sc-eiXkCI dpEIDn tab-link-fill"
          href="#2"
        >
          Featured
        </a>
      </li>
      <li
        className="sc-fRUzah ljiNiH"
        onClick={[Function]}
      >
        <a
          className="sc-eiXkCI dpEIDn tab-link-fill"
          href="#3"
        >
          Today
        </a>
      </li>
      <li
        className="sc-fRUzah ljiNiH"
        onClick={[Function]}
      >
        <a
          className="sc-eiXkCI dpEIDn tab-link-fill"
          href="#4"
        >
          Tomorrow
        </a>
      </li>
      <li
        className="sc-fRUzah ljiNiH"
        onClick={[Function]}
      >
        <a
          className="sc-eiXkCI dpEIDn tab-link-fill"
          href="#5"
        >
          Future
        </a>
      </li>
      <li
        className="sc-fRUzah ljiNiH"
        onClick={[Function]}
      >
        <a
          className="sc-eiXkCI dpEIDn tab-link-fill"
          href="#6"
        >
          Outright
        </a>
      </li>
      <li
        className="sc-fRUzah ljiNiH"
        onClick={[Function]}
      >
        <a
          className="sc-eiXkCI dpEIDn tab-link-fill"
          href="#7"
        >
          Leagues
        </a>
      </li>
      <li
        className="sc-fRUzah ljiNiH"
        onClick={[Function]}
      >
        <a
          className="sc-eiXkCI dpEIDn tab-link-fill"
          href="#8"
        >
          News
        </a>
      </li>
    </ul>
    <span
      id="nav-test-id-1"
    />
  </nav>
</div>
`;
